# varpulis

./: .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CONNECTIVITY_DESIGN.md  CONTRIBUTING.md  Cargo.toml  DELTA_ANALYSIS.md  Dockerfile  KANBAN.md  LICENSE-APACHE  LICENSE-MIT  PLAN_ZDD.md  PROJECT_ANALYSIS.md  README.md  RUNTIME_ANALYSIS.md  SASE_IMPROVMENT.md  SECURITY.md  ZDD_ANALYSIS.md  cep.md  codecov.yml  coverage.md  deny.toml
crates/varpulis-cli/: Cargo.toml
crates/varpulis-cli/src/: api.rs  auth.rs  client.rs  config.rs  lib.rs  main.rs  rate_limit.rs  security.rs  websocket.rs
crates/varpulis-cli/tests/: config_tests.rs
crates/varpulis-cluster/: Cargo.toml
crates/varpulis-cluster/src/: api.rs  chat.rs  connector_config.rs  coordinator.rs  ha.rs  health.rs  k8s_watcher.rs  lib.rs  metrics.rs  migration.rs  model_registry.rs  nats_coordinator.rs  nats_transport.rs  nats_worker.rs  pipeline_group.rs  rate_limit.rs  rbac.rs  routing.rs  worker.rs  ws.rs
crates/varpulis-cluster/src/raft/: mod.rs  network.rs  persistent_store.rs  routes.rs  state_machine.rs  store.rs
crates/varpulis-cluster/tests/: cluster_lib_tests.rs  integration.rs  nats_cluster_e2e.rs  nats_multi_worker_e2e.rs
crates/varpulis-cluster/tests/chaos/: edge_cases.rs  functional.rs  main.rs  perf.rs  sustained.rs
crates/varpulis-core/: Cargo.toml
crates/varpulis-core/src/: ast.rs  lib.rs  pagination.rs  security.rs  span.rs  types.rs  value.rs
crates/varpulis-core/src/validate/: builtins.rs  checks.rs  mod.rs  scope.rs  suggest.rs
crates/varpulis-core/tests/: types_and_span_tests.rs  validation_checks_tests.rs  validation_coverage_tests.rs
crates/varpulis-lsp/: Cargo.toml
crates/varpulis-lsp/src/: completion.rs  diagnostics.rs  hover.rs  lib.rs  main.rs  navigation.rs  semantic.rs  server.rs
crates/varpulis-lsp/tests/: diagnostics_tests.rs  lsp_coverage_tests.rs
crates/varpulis-mcp/: Cargo.toml
crates/varpulis-mcp/src/: client.rs  error.rs  lib.rs  main.rs  prompts.rs  resources.rs  server.rs  tools.rs  vpl_reference.md
crates/varpulis-mcp/tests/: e2e.rs  mcp_coverage_tests.rs
crates/varpulis-parser/: Cargo.toml  build.rs
crates/varpulis-parser/fuzz/: Cargo.toml
crates/varpulis-parser/fuzz/corpus/fuzz_parser/: aggregation  almost_keywords  config_block  deep_nesting  forecast  huge_duration  kleene_pattern  negation  sequence_pattern  simple_filter  single_char_string  unicode_stress
crates/varpulis-parser/fuzz/fuzz_targets/: fuzz_parser.rs
crates/varpulis-parser/src/: error.rs  expand.rs  helpers.rs  indent.rs  lexer.rs  lib.rs  optimize.rs  parser.rs  pest_parser.rs  varpulis.pest
crates/varpulis-parser/tests/: error_handling_tests.rs  expand_tests.rs  parser_coverage_tests.rs  proptest_parser.rs
crates/varpulis-runtime/: Cargo.toml
crates/varpulis-runtime/benches/: attention_benchmark.rs  comparison_benchmark.rs  context_benchmark.rs  hamlet_zdd_benchmark.rs  imperative_benchmark.rs  kleene_benchmark.rs  pattern_benchmark.rs  pst_forecast_benchmark.rs
crates/varpulis-runtime/fuzz/: Cargo.toml
crates/varpulis-runtime/fuzz/corpus/fuzz_json_event/: deep_array  huge_fields  single_quote  valid_evt  valid_jsonl
crates/varpulis-runtime/fuzz/corpus/fuzz_mqtt_message/: deep_json_array  flat_mqtt  malformed_json  valid_mqtt
crates/varpulis-runtime/fuzz/fuzz_targets/: fuzz_json_event.rs  fuzz_mqtt_message.rs
crates/varpulis-runtime/src/: aggregation.rs  attention.rs  circuit_breaker.rs  codec.rs  columnar.rs  connector.rs  context.rs  dead_letter.rs  engine.rs  event.rs  event_file.rs  greta.rs  join.rs  lib.rs  limits.rs  metrics.rs  pattern.rs  persistence.rs  sase.rs  scoring.rs  sequence.rs  simd.rs  simulator.rs  sink.rs  stream.rs  tenant.rs  timer.rs  watermark.rs  window.rs  worker_pool.rs
crates/varpulis-runtime/src/connector/: console.rs  database.rs  elasticsearch.rs  helpers.rs  http.rs  kafka.rs  kinesis.rs  managed.rs  managed_kafka.rs  managed_mqtt.rs  managed_nats.rs  managed_registry.rs  mod.rs  mqtt.rs  nats.rs  redis.rs  registry.rs  rest_api.rs  s3.rs  types.rs
crates/varpulis-runtime/src/engine/: compiler.rs  evaluator.rs  mod.rs  pattern_analyzer.rs  pipeline.rs  router.rs  sink_factory.rs  tests.rs  types.rs
crates/varpulis-runtime/src/enrichment/: cache.rs  http.rs  mod.rs  redis_provider.rs  sql.rs
crates/varpulis-runtime/src/hamlet/: aggregator.rs  graph.rs  graphlet.rs  mod.rs  optimizer.rs  snapshot.rs  template.rs
crates/varpulis-runtime/src/pst/: conformal.rs  hawkes.rs  markov_chain.rs  mod.rs  online.rs  pruning.rs  tree.rs
crates/varpulis-runtime/src/zdd_unified/: aggregator.rs  mod.rs  nfa_zdd.rs  propagation.rs
crates/varpulis-runtime/tests/: aggregation_coverage_tests.rs  attention_coverage_tests.rs  attention_tests.rs  checkpoint_tests.rs  compiler_coverage_tests.rs  connector_registry_tests.rs  context_coverage_tests.rs  context_tests.rs  cxo_scenario_tests.rs  edge_hamlet_tests.rs  edge_kleene_tests.rs  edge_negation_tests.rs  edge_pipeline_tests.rs  edge_window_tests.rs  engine_coverage_final_tests.rs  engine_coverage_tests.rs  engine_extended_tests.rs  engine_pipeline_extended_tests.rs  enrichment_tests.rs  evaluator_coverage_tests.rs  evaluator_pattern_tests.rs  event_extended_tests.rs  greta_coverage_tests.rs  imperative_tests.rs  integration_scenarios.rs  join_tests.rs  kafka_integration.rs  managed_connector_tests.rs  mandelbrot_tests.rs  misc_coverage_tests.rs  nats_e2e.rs  nested_query_tests.rs  partition_tests.rs  performance_tests.rs  persistence_coverage_tests.rs  pipeline_deep_tests.rs  proptest_runtime.rs  pst_convergence_tests.rs  pst_forecast_tests.rs  sase_coverage_tests.rs  (+7 more)
crates/varpulis-runtime/tests/fixtures/: fraud_scorer.onnx  test_model.onnx
crates/varpulis-zdd/: Cargo.toml
crates/varpulis-zdd/benches/: zdd_benchmark.rs
crates/varpulis-zdd/src/: arena.rs  debug.rs  iter.rs  lib.rs  node.rs  refs.rs  table.rs  zdd.rs
crates/varpulis-zdd/src/ops/: common.rs  difference.rs  intersection.rs  mod.rs  product.rs  union.rs
crates/varpulis-zdd/tests/: arena_coverage_tests.rs
(+662 files in other folders)
