[workspace]
resolver = "2"
members = [
    "crates/varpulis-core",
    "crates/varpulis-parser",
    "crates/varpulis-runtime",
    "crates/varpulis-cli",
    "crates/varpulis-zdd",
    "crates/varpulis-lsp",
    "crates/varpulis-cluster",
    "crates/varpulis-mcp",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Varpulis Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/varpulis/varpulis"
description = "A modern streaming analytics engine with attention-based pattern detection"

[workspace.dependencies]
# Parsing
logos = "0.14"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Collections
indexmap = { version = "2.1", features = ["serde"] }
smallvec = "1.11"
rustc-hash = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Metrics
prometheus = { version = "0.13", default-features = false }

# Random
rand = "0.8"

# Web/WebSocket
warp = { version = "0.3", features = ["tls"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Testing
pretty_assertions = "1.4"

[profile.release]
lto = true
codegen-units = 1
