[package]
name = "varpulis-cli"
version.workspace = true
edition.workspace = true
description = "CLI for Varpulis streaming analytics engine"

[lib]
name = "varpulis_cli"
path = "src/lib.rs"

[[bin]]
name = "varpulis"
path = "src/main.rs"

[dependencies]
varpulis-core = { path = "../varpulis-core" }
varpulis-parser = { path = "../varpulis-parser" }
varpulis-runtime = { path = "../varpulis-runtime", features = ["mqtt"] }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
warp = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }
rayon = "1.10"
serde_yaml = "0.9"
toml = "0.8"
thiserror = { workspace = true }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[features]
default = []
kafka = ["varpulis-runtime/kafka"]

[dev-dependencies]
tempfile = "3.10"
