[package]
name = "varpulis-cluster"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Distributed execution cluster for Varpulis streaming analytics"

[dependencies]
varpulis-core = { path = "../varpulis-core" }
varpulis-runtime = { path = "../varpulis-runtime", features = ["mqtt"] }
varpulis-parser = { path = "../varpulis-parser" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
warp = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
uuid = { version = "1", features = ["v4"] }
chrono = { workspace = true }
prometheus = { workspace = true }

[features]
default = []
k8s = ["kube", "k8s-openapi"]
onnx = ["varpulis-runtime/onnx"]
raft = ["openraft"]
persistent = ["raft", "rocksdb"]

[dependencies.kube]
version = "0.98"
features = ["runtime", "client"]
optional = true

[dependencies.k8s-openapi]
version = "0.24"
features = ["v1_30"]
optional = true

[dependencies.openraft]
version = "0.9"
features = ["serde"]
optional = true

[dependencies.rocksdb]
version = "0.22"
optional = true

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }
