[package]
name = "varpulis-cluster"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Distributed execution cluster for Varpulis streaming analytics"

[dependencies]
varpulis-core = { path = "../varpulis-core" }
varpulis-runtime = { path = "../varpulis-runtime", features = ["mqtt"] }
varpulis-parser = { path = "../varpulis-parser" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
warp = { workspace = true }
reqwest = { workspace = true }
uuid = { version = "1", features = ["v4"] }
chrono = { workspace = true }
prometheus = { workspace = true }
zeroize = { workspace = true }

[dependencies.async-nats]
version = "0.38"
optional = true

[dependencies.futures-util]
workspace = true
optional = true

[features]
default = []
k8s = ["kube", "k8s-openapi", "futures-util"]
onnx = ["varpulis-runtime/onnx"]
raft = ["openraft"]
persistent = ["raft", "rocksdb"]
nats-transport = ["async-nats", "futures-util"]

[dependencies.kube]
version = "0.98"
features = ["runtime", "client"]
optional = true

[dependencies.k8s-openapi]
version = "0.24"
features = ["v1_30"]
optional = true

[dependencies.openraft]
version = "0.9"
features = ["serde"]
optional = true

[dependencies.rocksdb]
version = "0.22"
optional = true

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }
async-nats = "0.38"
futures-util = "0.3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
uuid = { version = "1", features = ["v4"] }
serde_json = { workspace = true }
