[package]
name = "varpulis-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and AST for VPL"

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
smallvec = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
varpulis-parser = { path = "../varpulis-parser" }
