[package]
name = "varpulis-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Language Server Protocol implementation for VarpulisQL"

[[bin]]
name = "varpulis-lsp"
path = "src/main.rs"

[dependencies]
# LSP (use tower-lsp's re-exported lsp-types to avoid version mismatch)
tower-lsp = "0.20"

# Async runtime
tokio = { workspace = true }

# Varpulis crates
varpulis-parser = { path = "../varpulis-parser" }
varpulis-core = { path = "../varpulis-core" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
dashmap = "5.5"
ropey = "1.6"
once_cell = "1.19"
