[package]
name = "varpulis-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MCP server exposing Varpulis CEP engine to AI agents"

[[bin]]
name = "varpulis-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.15", features = ["server", "transport-io", "macros"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
schemars = "1"
varpulis-parser = { path = "../varpulis-parser" }
varpulis-core = { path = "../varpulis-core" }

[dev-dependencies]
pretty_assertions = { workspace = true }
rmcp = { version = "0.15", features = ["client", "transport-child-process"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
