[package]
name = "varpulis-parser"
version.workspace = true
edition.workspace = true
description = "Parser for VPL language"
build = "build.rs"

[dependencies]
varpulis-core = { path = "../varpulis-core" }
logos = { workspace = true }
thiserror = { workspace = true }
pest = "2.8.5"
pest_derive = "2.8.5"

[build-dependencies]
# Tree-sitter will be added here
