[package]
name = "varpulis-runtime"
version.workspace = true
edition.workspace = true
description = "Runtime execution engine for Varpulis"

[dependencies]
varpulis-core = { path = "../varpulis-core" }
varpulis-parser = { path = "../varpulis-parser" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }
rand = { workspace = true }
prometheus = { workspace = true }
async-trait = "0.1"
rayon = "1.10"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rumqttc = { version = "0.24", optional = true }

[features]
default = []
mqtt = ["rumqttc"]

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pattern_benchmark"
harness = false

[[bench]]
name = "attention_benchmark"
harness = false
