[package]
name = "varpulis-runtime"
version.workspace = true
edition.workspace = true
description = "Runtime execution engine for Varpulis"

[dependencies]
varpulis-core = { path = "../varpulis-core" }
varpulis-parser = { path = "../varpulis-parser" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }
rand = { workspace = true }
prometheus = { workspace = true }
async-trait = "0.1"
rayon = "1.10"
hnsw_rs = "0.3"
lru = "0.12"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
warp = "0.3"
futures = "0.3"

# Optional connectors
rumqttc = { version = "0.24", optional = true }
rdkafka = { version = "0.36", features = ["cmake-build"], optional = true }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "mysql", "sqlite"], optional = true }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"], optional = true }

# State persistence
rocksdb = { version = "0.22", optional = true }
bincode = "1.3"

[features]
default = []
mqtt = ["rumqttc"]
kafka = ["rdkafka"]
postgres = ["sqlx"]
mysql = ["sqlx"]
sqlite = ["sqlx"]
database = ["sqlx"]
redis = ["dep:redis"]
persistence = ["rocksdb"]
all-connectors = ["mqtt", "kafka", "database", "redis"]

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pattern_benchmark"
harness = false

[[bench]]
name = "attention_benchmark"
harness = false

[[bench]]
name = "imperative_benchmark"
harness = false

[[bench]]
name = "comparison_benchmark"
harness = false

