[package]
name = "varpulis-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Runtime execution engine for Varpulis"

[dependencies]
varpulis-core = { path = "../varpulis-core" }
varpulis-parser = { path = "../varpulis-parser" }
varpulis-zdd = { path = "../varpulis-zdd" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }
rand = { workspace = true }
prometheus = { workspace = true }
rustc-hash = { workspace = true }
async-trait = "0.1"
rayon = "1.10"
smallvec = "1.13"
hashlink = "0.10"
reqwest = { workspace = true }
warp = "0.3"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
core_affinity = "0.8"
zeroize = { workspace = true }

# Optional connectors
rumqttc = { version = "0.24", optional = true }
rdkafka = { version = "0.36", features = ["cmake-build"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "any", "postgres", "mysql", "sqlite"], optional = true }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"], optional = true }
async-nats = { version = "0.38", optional = true }

# AWS connectors
aws-config = { version = "1.5", optional = true }
aws-sdk-kinesis = { version = "1.54", optional = true }
aws-sdk-s3 = { version = "1.68", optional = true }
aws-credential-types = { version = "1.2", optional = true }

# Elasticsearch
elasticsearch = { version = "8.15.0-alpha.1", optional = true }

# ONNX Runtime for ML inference
ort = { version = "=2.0.0-rc.11", features = ["load-dynamic"], optional = true }


# State persistence
rocksdb = { version = "0.22", optional = true }

# Binary serialization
rmp-serde = { version = "1.3", optional = true }

[features]
default = []
mqtt = ["rumqttc"]
kafka = ["rdkafka"]
postgres = ["sqlx"]
mysql = ["sqlx"]
sqlite = ["sqlx"]
database = ["sqlx"]
redis = ["dep:redis"]
persistence = ["rocksdb"]
kinesis = ["aws-config", "aws-sdk-kinesis", "aws-credential-types"]
s3 = ["aws-config", "aws-sdk-s3", "aws-credential-types"]
nats = ["async-nats"]
elasticsearch = ["dep:elasticsearch"]
onnx = ["ort"]
binary-codec = ["rmp-serde"]
all-connectors = ["mqtt", "kafka", "nats", "database", "redis", "kinesis", "s3", "elasticsearch"]

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
async-nats = "0.38"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"

[[bench]]
name = "pattern_benchmark"
harness = false

[[bench]]
name = "imperative_benchmark"
harness = false

[[bench]]
name = "comparison_benchmark"
harness = false

[[bench]]
name = "kleene_benchmark"
harness = false

[[bench]]
name = "context_benchmark"
harness = false

[[bench]]
name = "hamlet_zdd_benchmark"
harness = false

[[bench]]
name = "pst_forecast_benchmark"
harness = false

