[package]
name = "varpulis-zdd"
version.workspace = true
edition.workspace = true
description = "Zero-suppressed Decision Diagrams for efficient set manipulation in CEP patterns"

[dependencies]
# No external dependencies for now - pure Rust implementation

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "zdd_benchmark"
harness = false
