[package]
name = "varpulis-zdd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zero-suppressed Decision Diagrams for efficient set manipulation in CEP patterns"

[dependencies]
rustc-hash = "2.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "zdd_benchmark"
harness = false
